--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "base": "https://faq.passkeys.2stable.com",
-    "icon": "https://faq.passkeys.2stable.com/help/assets/defaultIcon.png"
+    "base": "https://faq.authenticator.2stable.com",
+    "icon": "https://faq.authenticator.2stable.com/help/assets/defaultIcon.png"
 }
